# stackpilot

./: .env.example  .gitignore  README.md  agent.md  ai-agent-project-discussion-summary-2026-04-09.md  api-contracts.md  decision-log.md  evolution-policy.md  evolving-agent-architecture.md  feature-list.md  init.ps1  progress.md  prompts.md  pyproject.toml  rd-incident-ai-assistant-prd.md  schema.md  session-playbook.md  task-board.json  tech-spec.md  test-cases.md
app/: __init__.py  main.py
app/api/: __init__.py  alerts.py  feishu.py
app/clients/: __init__.py  feishu_client.py  github_review_client.py  llm_client.py  task_sync_client.py
app/core/: __init__.py  config.py  logging.py
app/models/: __init__.py  (+1 more)
scripts/: bootstrap.ps1  dev.ps1  smoke.ps1  start-ngrok.ps1  test.ps1
tests/: conftest.py  live_feishu_robot_prompts.md  p0_manual_validation_checklist.md  test_action_queue_service.py  test_alert_ingress.py  test_analysis_contracts.py  test_analysis_service.py  test_canonical_convention_service.py  test_code_review_flow.py  test_command_parser.py  test_convention_promotion_service.py  test_diff_reader.py  test_feishu_callback.py  test_feishu_client.py  test_feishu_live_flow.py  test_follow_up_flow.py  test_health.py  test_incident_action_service.py  test_interaction_recorder.py  test_knowledge_base.py  test_llm_client.py  test_org_convention_service.py  test_p0_smoke.py  test_postmortem_renderer.py  test_postmortem_service.py  test_reply_renderer.py  test_skill_miner.py  test_skill_registry.py  test_task_sync_service.py  test_thread_reader.py
(+71 files in other folders)
