[project]
name = "feishu-incident-copilot"
version = "0.1.0"
description = "P0 scaffold for a Feishu incident discussion assistant."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.12,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.11.3,<3.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "uvicorn[standard]>=0.34.2,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
